<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="activity_gps_track_controller">GPS Track controller</string>
    <string name="activity_new_trip">AndiCar trip record</string>
    <string name="tripChart1Title">Trips by types (top 3)</string>
    <string name="tripChart2Title">Trips by tags (top 3)</string>
    <string name="tripChart3Title">Trips by driver (top 3)</string>
    <string name="fillUpQuantityChart1Title">Fill-ups by types - quantity (top 3)</string>
    <string name="fillUpQuantityChart2Title">Fill-ups by tags - quantity (top 3)</string>
    <string name="fillUpQuantityChart3Title">Fill-ups by fuel type - quantity (top 3)</string>
    <string name="fillUpValueChart1Title">Fill-ups by types - amount (top 3)</string>
    <string name="fillUpValueChart2Title">Fill-ups by tags - amount (top 3)</string>
    <string name="fillUpValueChart3Title">Fill-ups by fuel type - amount (top 3)</string>
    <string name="expenseChart1Title">Expenses by types (top 3)</string>
    <string name="expenseChart2Title">Expenses by category (top 3)</string>
    <string name="expenseChart3Title">Expenses by tags (top 3)</string>
    <string name="chartFooterText">Total: %1$s</string>
    <string name="line_chart_filter_last_5">Last 5</string>
    <string name="line_chart_filter_last_10">Last 10</string>
    <string name="line_chart_filter_all">All</string>
    <string name="line_chart_info_1">A minimum of 2 FULL fill-ups needed for showing something here.</string>
    <string name="line_chart_info_2">Just one new full fill-up for a beautiful … dot here :)</string>
    <string name="line_chart_info_3">Just one new full fill-up for showing a real chart.</string>
    <string name="line_chart_fuel_price_title">Fuel price evolution %1$s</string>
    <string name="line_chart_fuel_price_marker_text">%1$s on\n%2$s</string>
    <string name="title_list_activity" tools:ignore="PluralsCandidate">%1$s: %2$s record(s)</string>
    <string name="title_statistics_activity">%1$s statistics</string>
    <string name="error_report_sent">Thank you for helping make AndiCar better!</string>
    <string name="pref_backup_now_title">Backup now</string>
    <string name="pref_backup_now_description">Manually backup your data.</string>
    <string name="pref_backup_list_description">View, delete &amp; share existing backups.</string>
    <string name="pref_restore_backup_not_found_summary">Backup files not found.</string>
    <string name="pref_restore_list_title">Choose a backup</string>
    <string name="pref_backup_service_schedule_summary_daily">Every day at %1$s</string>
    <string name="pref_backup_service_schedule_summary_weekly">Every %1$s at %2$s</string>
    <string name="pref_backup_service_choose_a_day">Select at least one day</string>
    <string name="pref_secure_backup_authorization_required">This service requires your authorization.</string>
    <string name="pref_secure_backup_destination_title">Destination</string>
    <string name="pref_secure_backup_gdrive_title">Drive folder</string>
    <string name="pref_secure_backup_gdrive_description">Will be used to store the backup files. Should be a dedicated one.</string>
    <string name="pref_secure_backup_gdrive_folder_selector_title">Choose a folder</string>
    <string name="pref_secure_backup_email_to_title">Send to</string>
    <string name="pref_secure_backup_only_on_wifi_title">Send only over wifi connection</string>
    <string name="pref_secure_backup_send_tracks_title">Send GPS track files</string>
    <string name="pref_secure_backup_send_tracks_description">Along with the database backup also send the GPS track files.</string>
    <string name="pref_google_account_description">It will be used for sending the email with the backup file attached.</string>
    <string name="pref_show_notification_on_success_description">Show a notification on success. Regardless of this option, a notification will be shown if an error occurred.</string>
    <string name="pref_bt_link_on_disconnect_label">When disconnecting from the Bluetooth:</string>
    <string name="pref_bt_link_on_connect_label">When connecting to the Bluetooth:</string>
    <string name="gen_internet_access_required">Internet access required to configure this service.</string>
    <string name="gen_mail_sent">Mail sent</string>
    <string name="gen_close">Close</string>
    <string name="gen_report_to_dev">Report</string>
    <string name="gen_validating_google_account">Validating account …</string>
    <string name="gen_test_email_subject">AndiCar Email test</string>
    <string name="gen_test_email_body">This is a test email for account validation.</string>
    <string name="gen_trip_detail">Trip detail</string>
    <string name="gen_fill_up_detail">Fill-up detail</string>
    <string name="gen_expense_detail">Expense detail</string>
    <string name="gen_gps_track_detail">GPS Track detail</string>
    <string name="gen_menu">Menu</string>
    <string name="gen_save">Save</string>
    <string name="gen_trip">Trip</string>
    <string name="gen_fill_up">Fill-up</string>
    <string name="gen_expense">Expense</string>
    <string name="gen_gps_track">GPS Track</string>
    <string name="gen_todo_detail">To-Do detail</string>
    <string name="gen_no_files_selected_for_delete">No file(s) selected. Nothing to delete.</string>
    <string name="gen_no_files_selected_for_share">No file(s) selected. Nothing to share.</string>
    <string name="gen_manage_list">Edit To-Do list</string>
    <string name="gen_manage_list_vertical">"E\nd\ni\nt\n\nT\no\n\nD\no\n\nl\ni\ns\nt"</string>
    <string name="mileage_draft_edit">Draft. Fill the arrival to complete it.</string>
    <string name="data_template_new">New template …</string>
    <string name="data_template_new_msg">A new template, based on the current values, will be created.\n\nName:</string>
    <string name="data_template_update">Update template</string>
    <string name="secure_backup_mail_body">Please visit https://sites.google.com/site/andicarfree/howto#TOC-Restore-your-data-from-secure-backup if you need to restore this backup. &lt;br&gt; &lt;br&gt; Sent by AndiCar - http://www.andicar.org"</string>
    <string name="mileage_type">Trip type:</string>
    <string name="expense_type">Expense type:</string>
    <string name="expense_category">Expense category:</string>
    <string name="fill_up_type">Fill-up type:</string>
    <string name="fill_up_category">Fuel type:</string>
    <string name="search_dialog_note">Note: % means any string</string>
    <string name="whats_new_dialog_btn_five_stars_caption">I give you\n★★★★★\nfor this!</string>
    <string name="gps_controller_start_track">Start a new GPS Track</string>
    <string name="gen_gpstrack_map">Map</string>
    <string name="gps_track_map_trip_start_title">Starting point</string>
    <string name="gps_track_map_trip_end_title">Ending point</string>
    <string name="gps_track_map_trip_pause_title">Pause point</string>
    <string name="gps_track_map_trip_start_date">Started at:</string>
    <string name="gps_track_map_trip_end_date">Ended at:</string>
    <string name="gps_track_map_pause_info">Pause from: %1$s\n\tto: %2$s\n\nDuration: %3$s</string>
    <string name="gps_track_no_car">No car defined!\nGPS tracking cannot be started.</string>
    <string name="bt_link_link_to_car_bt_disabled_title">Bluetooth is disabled</string>
    <string name="bt_link_link_to_car_bt_disabled_message">Bluetooth is disabled. Enable it to create a link.</string>
    <string name="main_activity_welcome_title">Welcome to AndiCar</string>
    <string name="main_activity_welcome_message">Hi! Thank you for installing AndiCar.\n\n
        The first step to use this app is to enter your car / vehicle current info.\n\n
        If you had used AndiCar before, there is a possibility to restore the old data (if data backups exist).</string>
    <string name="main_activity_welcome_restore">Restore</string>
    <string name="main_activity_welcome_create_car">Create car</string>
    <string name="main_activity_welcome_view_car">View car details</string>
    <string name="main_activity_welcome_message_car_created">Hi! Thank you for installing AndiCar.\n\n
        Based on your device locale, a new car created on behalf of you.\n\n
        I strongly recommend you to verify and change/correct the details of this car (units of measure and default currency) before using it.\n\n
        This can be done from Settings -> General settings -> Cars.</string>
    <string name="pref_general_title">General settings</string>
    <string name="pref_car_driver_category_title">Cars and drivers</string>
    <string name="pref_car_title">Cars</string>
    <string name="pref_car_summary">Add, delete, modify cars.</string>
    <string name="pref_driver_title">Drivers</string>
    <string name="pref_driver_summary">Add, delete, modify drivers.</string>
    <string name="pref_uom_category_title">Measurement units</string>
    <string name="pref_uom_title">UOM</string>
    <string name="pref_uom_summary">Add, delete, modify measurement units</string>
    <string name="pref_uom_conversion_title">UOM conversion</string>
    <string name="pref_uom_conversion_summary">Add, delete, modify conversions between measurement units</string>
    <string name="pref_log_files_title">Log files</string>
    <string name="pref_financial_title">Financial settings</string>
    <string name="pref_fuel_type_title">Fuel types</string>
    <string name="pref_fuel_type_summary">Add, delete, modify fuel types</string>
    <string name="pref_reminder_category_title">Reminders</string>
    <string name="pref_todo_type_title">To-do types</string>
    <string name="pref_todo_type_summary">Add, delete, modify to-do types</string>
    <string name="pref_todo_title">To-do</string>
    <string name="pref_todo_summary">Add, delete, modify to-do</string>
    <string name="pref_tag_title">Tags</string>
    <string name="pref_tag_summary">Add, delete, modify tags</string>
    <string name="pref_backup_restore_title">Backup &amp; Restore</string>
    <string name="pref_category_gps_tracking">GPS Tracking Preferences</string>
    <string name="gen_cancel">Cancel</string>
    <string name="gen_other">Other</string>
    <string name="gen_required">Required</string>
    <string name="gen_is_active">Active</string>
    <string name="gen_car_label">Car:</string>
    <string name="gen_driver_label">Driver:</string>
    <string name="gen_tag">Tag:</string>
    <string name="gen_comment_label">Comment:</string>
    <string name="gen_trips">Trips</string>
    <string name="gen_expenses">Expenses</string>
    <string name="gen_gps_tracks">GPS Tracks</string>
    <string name="gen_todo_list">Todo list</string>
    <string name="gen_about">About</string>
    <string name="gen_report_issue">Report an issue</string>
    <string name="gen_settings">Settings</string>
    <string name="gen_name_label">Name:</string>
    <string name="gen_current_index">Current odometer:</string>
    <string name="gen_menu_rate_app">Rate this app</string>
    <string name="gps_track_controller_create_mileage_label">Create trip record</string>
    <string name="gps_track_pause">Pause</string>
    <string name="gps_track_start">Start</string>
    <string name="currency_rate_edit_currency_from_label">From currency</string>
    <string name="currency_rate_edit_currency_to_label">To currency</string>
    <string name="currency_rate_edit_rate_label">Rate: 1 %1$s = </string>
    <string name="currency_rate_edit_inverse_rate_label">Inverse rate: 1 %1$s = %2$s %3$s</string>
    <string name="chart_filter_all">All</string>
    <string name="chart_filter_current_month">Current month</string>
    <string name="chart_filter_previous_month">Previous month</string>
    <string name="chart_filter_current_year">Current year</string>
    <string name="chart_filter_previous_year">Previous year</string>
    <string name="chart_filter_custom_period">Custom period</string>
</resources>