<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ AndiCar
  ~
  ~  Copyright (c) 2017 Miklos Keresztes (miklos.keresztes@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chart_filter_all"
        android:icon="@null"
        android:title="@string/chart_filter_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/chart_filter_current_month"
        android:icon="@null"
        android:title="@string/chart_filter_current_month"
        app:showAsAction="never"/>

    <item
        android:id="@+id/chart_filter_previous_month"
        android:icon="@null"
        android:title="@string/chart_filter_previous_month"
        app:showAsAction="never"/>

    <item
        android:id="@+id/chart_filter_current_year"
        android:icon="@null"
        android:title="@string/chart_filter_current_year"
        app:showAsAction="never"/>

    <item
        android:id="@+id/chart_filter_previous_year"
        android:icon="@null"
        android:title="@string/chart_filter_previous_year"
        app:showAsAction="never"/>

    <item
        android:id="@+id/chart_filter_custom_period"
        android:icon="@null"
        android:title="@string/chart_filter_custom_period"
        app:showAsAction="never"/>

</menu>