<!--
  ~ AndiCar
  ~
  ~  Copyright (c) 2016 Miklos Keresztes (miklos.keresztes@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="andicar.n.activity.preference.PreferenceActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_general_black"
        android:title="@string/pref_general_title"/>

    <header
        android:fragment="andicar.n.activity.preference.PreferenceActivity$FinancialPreferenceFragment"
        android:icon="@drawable/ic_settings_financial_black"
        android:title="@string/pref_financial_title"/>

    <header
        android:fragment="andicar.n.activity.preference.PreferenceActivity$BackupRestorePreferenceFragment"
        android:icon="@drawable/ic_settings_backup_restore_black"
        android:title="@string/pref_backup_restore_title"/>

    <header
        android:fragment="andicar.n.activity.preference.PreferenceActivity$GPSTrackPreferenceFragment"
        android:icon="@drawable/ic_settings_gps_black"
        android:title="@string/pref_category_gps_tracking"/>

</preference-headers>
