<?xml version="1.0" encoding="utf-8"?><!--
 AndiCar - a car management software for Android powered devices.

 Copyright (C) 2010 Miklos Keresztes (miklos.keresztes@gmail.com)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vgRoot"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <include
            layout="@layout/data_entry_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/lCarZone"
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCarLabel"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/AndiCarLabelStyle"
                android:text="@string/gen_car_label" />

            <Spinner
                android:id="@+id/spnCar"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/AndiCarSpinnerStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lDriverZone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDriverLabel"
                style="@style/AndiCarLabelStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/gen_driver_label" />

            <Spinner
                android:id="@+id/spnDriver"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/AndiCarSpinnerStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lExpTypeZone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvExpenseTypeLabel"
                style="@style/AndiCarLabelStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/mileage_type" />

            <Spinner
                android:id="@+id/spnExpType"
                style="@style/AndiCarSpinnerStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:tag="spnDriver" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNameLabel"
            style="@style/AndiCarLabelStyle"
            android:text="@string/gen_name_label" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/ckIsCreateMileage"
            style="@style/AndiCarCheckBox"
            android:layout_marginTop="10dp"
            android:text="@string/gps_track_controller_create_mileage_label" />

        <LinearLayout
            android:id="@+id/llIndexStartZone"
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIndexStartLabel"
                style="@style/AndiCarLabelStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/gen_current_index" />

            <EditText
                android:id="@+id/etIndexStart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits=".1234567890"
                android:inputType="numberDecimal" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvTagLabel"
            style="@style/AndiCarLabelStyle"
            android:text="@string/gen_tag" />

        <AutoCompleteTextView
            android:id="@+id/acTag"
            style="@style/AndiCarAutocompleteTextStyle" />

        <TextView
            android:id="@+id/tvUserCommentLabel"
            style="@style/AndiCarLabelStyle"
            android:text="@string/gen_comment_label" />

        <AutoCompleteTextView
            android:id="@+id/acUserComment"
            style="@style/AndiCarAutocompleteTextStyle" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGPSTrackPauseResume"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_track_pause"
                android:textColor="@color/primary_accent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGPSTrackStartStop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_track_start"
                android:textColor="@color/primary_accent"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView style="@style/AndiCarSeparatorView" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dialog_content_vertical_spacing">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_cancel"
                android:textColor="@color/primary_accent" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
