<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndiCar
  ~
  ~  Copyright (c) 2017 Miklos Keresztes (miklos.keresztes@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/vgRoot"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/tvDebugInfo"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="default: "
            tools:ignore="HardcodedText"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvCurrencyFrom"
                style="@style/AndiCarLabelStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/currency_rate_edit_currency_from_label"/>

            <Spinner
                android:id="@+id/spnCurrency"
                style="@style/AndiCarSpinnerStyle"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvCurrencyTo"
                style="@style/AndiCarLabelStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/currency_rate_edit_currency_to_label"/>

            <Spinner
                android:id="@+id/spnCurrencyTo"
                style="@style/AndiCarSpinnerStyle"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrencyRateLabel"
                style="@style/AndiCarLabelStyle"
                android:text="@string/currency_rate_edit_rate_label"/>

            <EditText
                android:id="@+id/etCurrencyRate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:digits=".1234567890"
                android:inputType="numberDecimal"
                android:hint="@string/gen_required"
                android:tag="@string/gen_required"/>

            <TextView
                android:id="@+id/tvCurrencyRateToLabel"
                style="@style/AndiCarLabelStyle"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvInverseRateLabel"
            style="@style/AndiCarLabelStyle"
            android:text="@string/currency_rate_edit_inverse_rate_label"/>

        <TextView
            android:id="@+id/tvUserComment"
            style="@style/AndiCarLabelStyle"
            android:layout_marginTop="5dp"
            android:text="@string/gen_comment_label"/>

        <AutoCompleteTextView
            android:id="@+id/acUserComment"
            style="@style/AndiCarAutocompleteTextStyle"
            android:inputType="text"/>

        <CheckBox
            android:id="@+id/ckIsActive"
            style="@style/AndiCarCheckBox"
            android:layout_marginTop="5dp"
            android:text="@string/gen_is_active"/>
    </LinearLayout>
</ScrollView>
